--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,12 +12,15 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+
+	--dark-accent: navy;
 }
 
 * {
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
+	color: black;
 }
 
 body {
@@ -26,6 +29,18 @@ body {
 	justify-content: flex-start;
 	align-items: center;
 	width: 100%;
+	height: 100%;
+	overflow-y: scroll;
+	background-color: white;
+
+	&::-webkit-scrollbar {
+		display: none;
+	}
+}
+
+html {
+	height: 100%;
+	overflow: hidden;
 }
 
 header {
@@ -34,31 +49,192 @@ header {
 	justify-content: flex-start;
 	align-items: center;
 	width: 100%;
+	position: sticky;
+	top: 0px;
+	background-color: white;
+	border-bottom: solid 1px gray;
 
 	>button {
 		margin: 5px;
-		padding: 5px;
 	}
 }
 
-ul#bookmark-list {
-	display: flex;
-	width: 100%;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
+button {
+	padding: 5px;
+	border-radius: 5px;
+	background-color: white;
+	border: none;
+	outline: solid grey 1px;
+	box-shadow: 2px 2px lightgrey;
 
-	>li {
-		width: 100%;
+	&:hover {
+		cursor: pointer;
+		outline-color: black;
+	}
+
+	&:active {
+		box-shadow: 0px 0px;
+		position: relative;
+		top: 1px;
+		left: 1px;
+		outline-color: gray;
+	}
+}
+
+.bookmark-list {
+	display: grid;
+	width: calc(100% - 10px);
+	border-radius: 5px;
+	outline: gray solid 1px;
+	margin: 5px;
+	box-shadow: 2px 2px lightgrey;
+	grid-template-columns: 50% 50%;
+	background-color: white;
+
+	>input {
+		height: 100%;
+		width: 200%;
+		position: relative;
+		left: 0;
+		top: 0;
+		z-index: 1;
+		opacity: 0;
+
+		+h1::before {
+			content: "⮛";
+			position: absolute;
+			right: 5px;
+			color: gray;
+		}
+
+		&:hover {
+			cursor: pointer;
+
+			+h1::before {
+				color: black;
+
+			}
+		}
+
+		&:checked {
+			~ul {
+				height: 0px;
+			}
+
+			+h1::before {
+				content: "⮘";
+			}
+		}
+	}
+
+	>h1 {
+		font-size: 1.5em;
+		padding: 5px;
 		display: flex;
 		flex-direction: row;
-		justify-content: space-between;
 		align-items: center;
+		justify-content: center;
+		width: 200%;
+		position: relative;
+		left: -100%;
+		top: 0;
+		z-index: 0;
 
-		>p, >a {
-			width: 50%;
+	}
+
+	>ul {
+		grid-column: 1 / span 2;
+		grid-row: 2;
+		display: flex;
+		width: 100%;
+		justify-content: flex-start;
+		align-items: flex-start;
+		flex-direction: column;
+
+		>li {
+			width: 100%;
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			align-items: center;
+			list-style-type: none;
+			overflow: hidden;
+			background-color: white;
+			user-select: none;
+
+			&:nth-of-type(2n + 1) {
+				background-color: lightgray;
+			}
+
+			&:hover {
+				background-color: lightblue;
+				cursor: pointer;
+
+				>p:nth-child(1) {
+					color: navy;
+				}
+			}
+
+			&.extended {
+				flex-direction: column;
+				align-items: flex-start;
+				justify-content: center;
+
+				&:not(:last-child) {
+					border-bottom: solid gray 1px;
+				}
+
+				>p {
+					width: 100%;
+					font-weight: normal;
+
+					&:nth-child(1) {
+						font-weight: normal;
+
+						&::before {
+							content: "Name:";
+							margin-right: 5px;
+							font-weight: bold;
+							font-style: italic;
+						}
+					}
+
+					&:nth-child(2) {
+						text-decoration: none;
+
+						&::before {
+							content: "URL:";
+							margin-right: 5px;
+							font-weight: bold;
+							font-style: italic;
+						}
+					}
+				}
+			}
+
+			>p {
+				width: 50%;
+				white-space: nowrap;
+				display: none;
+				flex-direction: row;
+				align-items: center;
+				justify-content: flex-start;
+				overflow: hidden;
+				margin: 3px;
+
+				&:nth-child(2),
+				&:nth-child(1) {
+					display: flex;
+				}
+
+				&:nth-child(1) {
+					font-weight: bold;
+				}
+
+				&:nth-child(2) {
+					text-decoration: underline;
+				}
+			}
 		}
 	}
 }
-
-
